--- a/account-referrals.html
+++ b/account-referrals.html
@@ -107,7 +107,7 @@
                                     </a>
                                 </li>
                                 <li class="account__nav-item">
-                                    <a class="account__nav-link active" href="../flexbot/settings.html">
+                                    <a class="account__nav-link" href="../flexbot/settings.html">
                                         <span>Settings</span>
                                         <svg xmlns="http://www.w3.org/2000/svg" width="18.231" height="20" viewBox="0 0 18.231 20">
                                             <g id="Сгруппировать_1665" data-name="Сгруппировать 1665" transform="translate(-2.807 -2)">
