--- a/create.html
+++ b/create.html
@@ -76,7 +76,7 @@
 
                     </div>
                     <div class="login__footer login__footer--flex">
-                        <a class="login__block-link" href="#">Already have account?</a>
+                        <a class="login__block-link" href="../flexbot/login.html">Already have account?</a>
                     </div>
                 </div>
             </section>
