--- a/login.html
+++ b/login.html
@@ -59,7 +59,7 @@
                     </div>
                     <div class="login__footer login__footer--flex">
                         <a class="login__block-link" href="#">Create account</a>
-                        <a class="login__block-link login__block-link--grey" href="#">Can't log in?</a>
+                        <a class="login__block-link login__block-link--grey" href="../flexbot/create.html">Can't log in?</a>
                     </div>
                 </div>
             </section>
